# triton-x86-poc

./: CMakeLists.txt
test/: CMakeLists.txt  bitcast.mlir  bitcast.mlir.driver  convert_splat_float.mlir  convert_splat_float.mlir.driver  lit.cfg.py  lit.site.cfg.py.in
tools/: CMakeLists.txt
tools/triton-x86-poc-opt/: CMakeLists.txt  triton-x86-poc-opt.cpp
